Cleanup Core Profile TCK Runner
Signed-off-by: Scott Marlow <smarlow@redhat.com>